- New `qt.chromium.experimental_web_platform_features` setting, which is enabled
  on Qt 5 by default, to maximize compatibility with websites despite an aging
  Chromium backend.
- New `colors.webpage.darkmode.increase_text_contrast` setting for Qt 6.3+
- New `fonts.tooltip`, `colors.tooltip.bg` and `colors.tooltip.fg` settings.
- New `log-qt-events` debug flag for `-D`

Removed
~~~~~~~

- Python 3.8.0 or newer is now required.
  - Support for Python 3.6 and 3.7 is dropped, as they both reached
    their [end of life] in December 2021 and June 2023, respectively.
- Support for Qt/PyQt before 5.15.0 and QtWebEngine before 5.15.2 are now
  dropped, as older Qt versions are
  https://endoflife.date/qt[end-of-life upstream] since mid/late 2020
  (5.13/5.14) and late 2021 (5.12 LTS).
- The `--enable-webengine-inspector` flag is now dropped. It used to be ignored
  but still accepted, to allow doing a `:restart` from versions older than v2.0.0.
  Thus, switching from v1.x.x directly to v3.0.0 via `:restart` will not be possible.
- Support for macOS 10.14 and 10.15 is now dropped, raising the minimum
  required macOS version to macOS 11 Big Sur.
  * Qt 6.4 was the latest version to support macOS 10.14 and 10.15.
  * It should be possible to build a custom .dmg with Qt 6.4, but this is
    unsupported and not recommended.
- Support for Windows 8 and for Windows 10 before 1809 is now dropped.
  * Support for older Windows 10 versions might still be present in Qt 6.0/6.1/6.2
  * Support for Windows 8.1 is still present in Qt 5.15
  * It should be possible to build a custom .exe with those versions, but this
    is unsupported and not recommended.
- Support for 32-bit Windows is now dropped.

Changed
~~~~~~~

- The qutebrowser icons got moved from `icons/` to `qutebrowser/icons` in the
  repository, so that it's possible for qutebrowser to load them using Python's
  resource system (rather than compiling them into a Qt resource file).