@@ -86,6 +86,22 @@ Feature: quickmarks and bookmarks
         And I run :bookmark-del http://localhost:(port)/data/numbers/5.txt
         Then the bookmark file should not contain "http://localhost:*/data/numbers/5.txt "
 
+    Scenario: Deleting all bookmarks
+        When I open data/numbers/1.txt
+        And I run :bookmark-add
+        And I open data/numbers/2.txt
+        And I run :bookmark-add
+        And I run :bookmark-del --all
+        Then the bookmark file should not contain "http://localhost:*/data/numbers/1.txt"
+        And the bookmark file should not contain "http://localhost:*/data/numbers/2.txt"
+
+    Scenario: Deleting all bookmarks with url
+        When I open data/numbers/1.txt
+        And I run :bookmark-add
+        And I run :bookmark-del --all https://example.org
+        Then the error "Cannot specify url and --all" should be shown
+        And the bookmark file should contain "http://localhost:*/data/numbers/1.txt"
+
     Scenario: Deleting the current page's bookmark if it doesn't exist
         When I open data/hello.txt
         And I run :bookmark-del
@@ -209,6 +225,19 @@ Feature: quickmarks and bookmarks
         When I run :quickmark-add http://localhost:(port)/data/numbers/18.txt eighteen
         And I run :quickmark-del eighteen
         Then the quickmark file should not contain "eighteen http://localhost:*/data/numbers/18.txt "
+
+    Scenario: Deleting all quickmarks
+        When I run :quickmark-add http://localhost:(port)/data/numbers/1.txt one
+        When I run :quickmark-add http://localhost:(port)/data/numbers/2.txt two
+        And I run :quickmark-del --all
+        Then the quickmark file should not contain "one http://localhost:*/data/numbers/1.txt"
+        And the quickmark file should not contain "two http://localhost:*/data/numbers/2.txt"
+
+    Scenario: Deleting all quickmarks with name
+        When I run :quickmark-add http://localhost:(port)/data/numbers/1.txt one
+        And I run :quickmark-del --all invalid
+        Then the error "Cannot specify name and --all" should be shown
+        And the quickmark file should contain "one http://localhost:*/data/numbers/1.txt"
 
     Scenario: Deleting the current page's quickmark if it has none
         When I open data/hello.txt
